final home page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>WDD 131 - Dynamic Web Fundamentals - Karim Valenzuela</title>
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Karim Valenzuela. This page will demonstrate my prerequesite knowledge applying HTML and CSS in the design and development of a home page.">
     <link rel="stylesheet" href="./styles/base.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap" rel="stylesheet">
     <script src="/scripts/getdates.js" defer></script>
 </head>
 <body>
@@ -15,13 +18,13 @@
     <nav>
         <ul>
             <li>
-                <a href="#">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/karim-valenzuela/" target="_blank">LinkedIn</a>
             </li>
             <li>
-                <a href="https://byupw.instructure.com/">Canvas</a>
+                <a href="https://byupw.instructure.com/" target="_blank">Canvas</a>
             </li>
             <li>
-                <a href="#">Scripture</a>
+                <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/alma/30?lang=spa&id=p44#p44" target="_blank">Scripture</a>
             </li>
             <li>
                 <a href="#">Final Project</a>
@@ -39,23 +42,24 @@
             <h3 class="state">Sinaloa, México</h3>
             <div class="card1">
                 <img src="/images/banderasMexico-08.jpg" alt="Official Flag of Mexico">
-                <p>
-                    Mexico has valuable natural resources like oil, silver, copper, and agricultural products.
-                    Many Mexicans are mestizos, meaning they have a mixture of Spanish and indigenous blood 
-                    Mexico is known for drinking a lot of Coca-Cola.
-                </p>
+                <div class="text2">
+                    <p>
+                        Mexico has valuable natural resources like oil, silver, copper, and agricultural products.
+                        Many Mexicans are mestizos, meaning they have a mixture of Spanish and indigenous blood 
+                        Mexico is known for drinking a lot of Coca-Cola.
+                    </p>
+                </div>
             </div>
 
         </section>
         <section class="card">
-            <h2>Web Dev Resources</h2>
-            <div>
+            <h1>Web Dev Resources</h1>
+            <div class="card2">
                 <ul>
-                    <li><a href="https://www.w3schools.com/">W3Schools</a></li>
-                    <li><a href="https://css-tricks.com/">CSS Tricks</a></li>
-                    <li><a href="https://imageresizer.com/">Image Resizer</a></li>
-                    <li></li>
-                    <li><a href="https://squoosh.app/">Squoosh</a></li>
+                    <li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a></li>
+                    <li><a href="https://css-tricks.com/" target="_blank">CSS Tricks</a></li>
+                    <li><a href="https://imageresizer.com/" target="_blank">Image Resizer</a></li>
+                    <li><a href="https://squoosh.app/" target="_blank">Squoosh</a></li>
                 </ul>
             </div>
         </section>
