image not showing

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <h3 class="state">Sinaloa, México</h3>
             <div class="card1">
-                <img src="/images/banderasMexico-08.jpg" alt="Official Flag of Mexico">
+                <img src="./images/banderasMexico-08.jpg" alt="Official Flag of Mexico">
                 <div class="text2">
                     <p>
                         Mexico has valuable natural resources like oil, silver, copper, and agricultural products.
