--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 - Dynamic Web Fundamentals - Karim Valenzuela</title>
-    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Karim Valenzuela. This page will demonstrate my prerequesite knowledge applying HTML and CSS in the design and development of a home page.">
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Karim Valenzuela. This page will demonstrate my prerequesite knowledge applying HTML and CSS in the design and development of a home page." author="Karim Valenzuela">
     <link rel="stylesheet" href="./styles/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +34,7 @@
 
     <main>
         <section class="card">
-            <h1>About Me</h1>
+            <h2>About Me</h2>
             <div class="card1">
                 <p>My name is Karim. I was born on Mexico and live with my family in Sinaloa. I am currently working as a systems clerk with a tech consultant. My family are my world and I love spending time with them. I love to travel and I love to learn new things.</p>
                 <img src="./images/karimg.jpeg" alt="Karim">
@@ -53,7 +53,7 @@
 
         </section>
         <section class="card">
-            <h1>Web Dev Resources</h1>
+            <h2>Web Dev Resources</h2>
             <div class="card2">
                 <ul>
                     <li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a></li>
