--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 - Dynamic Web Fundamentals - Karim Valenzuela</title>
-    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Karim Valenzuela. This page will demonstrate my prerequesite knowledge applying HTML and CSS in the design and development of a home page." author="Karim Valenzuela">
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Karim Valenzuela. This page will demonstrate my prerequesite knowledge applying HTML and CSS in the design and development of a home page.">
+    <meta name="author" content="Karim Valenzuela">
     <link rel="stylesheet" href="./styles/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
