--- a/week02/media-query.html
+++ b/week02/media-query.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WDD131 - Media Queries</title>
     <meta name="description" content="This is a page that shows the effects if media queries in CSS">
     <meta name="author" content="Karim Valenzuela">
     <link rel="preconnect" href="https://fonts.googleapis.com">
