--- a/week02/temples.html
+++ b/week02/temples.html
@@ -27,15 +27,42 @@
 
     <main>
         <h2>Home</h2>
-        <figure></figure>
-        <figure></figure>
-        <figure></figure>
-        <figure></figure>
-        <figure></figure>
-        <figure></figure>
-        <figure></figure>
-        <figure></figure>
-        <figure></figure>
+        <figure>
+            <img src="./img/san-diego-temple-.jpg" alt="San Diego California Temple ">
+            <figcaption>San Diego California</figcaption>
+        </figure>
+        <figure>
+            <img src="./img/san-diego-temple-.jpg" alt="San Diego California Temple ">
+            <figcaption>San Diego California</figcaption>
+        </figure>
+        <figure>
+            <img src="./img/san-diego-temple-.jpg" alt="San Diego California Temple ">
+            <figcaption>San Diego California</figcaption>
+        </figure>
+        <figure>
+            <img src="./img/san-diego-temple-.jpg" alt="San Diego California Temple ">
+            <figcaption>San Diego California</figcaption>
+        </figure>
+        <figure>
+            <img src="./img/san-diego-temple-.jpg" alt="San Diego California Temple ">
+            <figcaption>San Diego California</figcaption>
+        </figure>
+        <figure>
+            <img src="./img/san-diego-temple-.jpg" alt="San Diego California Temple ">
+            <figcaption>San Diego California</figcaption>
+        </figure>
+        <figure>
+            <img src="./img/san-diego-temple-.jpg" alt="San Diego California Temple ">
+            <figcaption>San Diego California</figcaption>
+        </figure>
+        <figure>
+            <img src="./img/san-diego-temple-.jpg" alt="San Diego California Temple ">
+            <figcaption>San Diego California</figcaption>
+        </figure>
+        <figure>
+            <img src="./img/san-diego-temple-.jpg" alt="San Diego California Temple ">
+            <figcaption>San Diego California</figcaption>
+        </figure>
 
     </main>
 
