--- a/week02/temples.html
+++ b/week02/temples.html
@@ -13,8 +13,9 @@
 <body>
     <header>
         <h1>Temple Album</h1>
+        <a id="menu" href="#"></a>
         <nav>
-            <ul>
+            <ul class="navigation">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Old</a></li>
                 <li><a href="#">New</a></li>
