change in directories

--- a/temples.html
+++ b/temples.html
@@ -30,39 +30,39 @@
         <h2>Home</h2>
         <div class="container">
             <figure>
-                <img src="./img/san-diego-temple-.jpg" alt="San Diego California Temple ">
+                <img src="./images/san-diego-temple-.jpg" alt="San Diego California Temple ">
                 <figcaption>San Diego California</figcaption>
             </figure>
             <figure>
-                <img src="./img/san-diego-temple-.jpg" alt="San Diego California Temple ">
+                <img src="./images/san-diego-temple-.jpg" alt="San Diego California Temple ">
                 <figcaption>San Diego California</figcaption>
             </figure>
             <figure>
-                <img src="./img/san-diego-temple-.jpg" alt="San Diego California Temple ">
+                <img src="./images/san-diego-temple-.jpg" alt="San Diego California Temple ">
                 <figcaption>San Diego California</figcaption>
             </figure>
             <figure>
-                <img src="./img/san-diego-temple-.jpg" alt="San Diego California Temple ">
+                <img src="./images/san-diego-temple-.jpg" alt="San Diego California Temple ">
                 <figcaption>San Diego California</figcaption>
             </figure>
             <figure>
-                <img src="./img/san-diego-temple-.jpg" alt="San Diego California Temple ">
+                <img src="./images/san-diego-temple-.jpg" alt="San Diego California Temple ">
                 <figcaption>San Diego California</figcaption>
             </figure>
             <figure>
-                <img src="./img/san-diego-temple-.jpg" alt="San Diego California Temple ">
+                <img src="./images/san-diego-temple-.jpg" alt="San Diego California Temple ">
                 <figcaption>San Diego California</figcaption>
             </figure>
             <figure>
-                <img src="./img/san-diego-temple-.jpg" alt="San Diego California Temple ">
+                <img src="./images/san-diego-temple-.jpg" alt="San Diego California Temple ">
                 <figcaption>San Diego California</figcaption>
             </figure>
             <figure>
-                <img src="./img/san-diego-temple-.jpg" alt="San Diego California Temple ">
+                <img src="./images/san-diego-temple-.jpg" alt="San Diego California Temple ">
                 <figcaption>San Diego California</figcaption>
             </figure>
             <figure>
-                <img src="./img/san-diego-temple-.jpg" alt="San Diego California Temple ">
+                <img src="./images/san-diego-temple-.jpg" alt="San Diego California Temple ">
                 <figcaption>San Diego California</figcaption>
             </figure>
 
