--- a/temples.html
+++ b/temples.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temples</title>
+    <title>Temple Album</title>
     <link rel="stylesheet" href="./styles/temples.css">
     <link rel="stylesheet" href="./styles/temples-large.css">
     <meta name="description" content="This page uses CSS and JS to show temples.">
