--- a/place.html
+++ b/place.html
@@ -17,8 +17,8 @@
         <section class="container">
             <div class="hero">
                 <picture>
-                    <!-- <source media="(min-width:900px)" srcset="./images/mazatlan-hero-large.webp"> -->
-                    <!-- <source media="(min-width:1400px)" srcset="./images/mazatlan-hero-larger.webp"> -->
+                    <source media="(min-width:640px)" srcset="./images/mazatlan-hero-large.webp" >
+                    <source media="(min-width:1400px)" srcset="./images/mazatlan-hero-larger.webp">
                     <img src="./images/mzt-vertical.webp" alt="Rocky coast infront of a body of water." >
                 </picture>
             </div>
