--- a/week04/oojs.html
+++ b/week04/oojs.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <p>This example requires you to enter commands in your browser's JavaScript console (see <a href="https://developer.mozilla.org/en-US/docs/Learn/Common_questions/What_are_browser_developer_tools">What are browser developer tools</a> for more information).</p>
+    <ul id="myList"></ul>
     
     <script>
         const person = {
@@ -24,6 +24,10 @@
             },
         }
 
+        const myDataName = "height"
+        const myDataValue = "1.75m"
+        person[myDataName] = myDataValue
+
 
         function logProperty(propertyName){
             console.log(person[propertyName])
@@ -34,7 +38,16 @@
         logProperty("age")
         // 32
 
-        
+        let names = ['Nancy','Blessing','Jorge','Svetlana','Bob']
+
+        // Using the array.filter() method, create an array named namesB with only those names from the name array that start with the character 'B'.
+        let namesB = names.filter(name => name.charAt(0)==='B')
+
+        // Using the array.map() method, create a new array named namesLength that contains the length of each name in the names array. Expected output is [5, 8, 5, 8, 3].
+        let nameLengths = names.map((name)=>name.length)
+
+        // Using the names.reduce() method, create an expression that returns the average string length of the names in the names array. Expected output is 5.8.
+        names.reduce((total,name)=> total + name.length,0) / names.length
 
     </script>
   </body>
