--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temple Album</title>
+    <title>Temple Album Enhanced</title>
     <link rel="stylesheet" href="./styles/filtered-temples.css">
     <link rel="stylesheet" href="./styles/filtered-temples-large.css">
     <meta name="description" content="This page uses CSS and JS to show temples with filters.">
