website planning document

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -6,17 +6,41 @@
     <title>Cool Songs</title>
     <meta name="description" content="This page will show recommendations of songs.">
     <meta name="author" content="Karim Valenzuela">
+    <link rel="stylesheet" href="./styles/siteplan.css">
+    <script src="./scripts/siteplan.js" defer></script>
 </head>
 <body>
-    <h1>Cool Songs</h1>
+    <header>
+        <h1>Cool Songs</h1>
+        <a id="menu" href="#"></a>
+        <nav>
+            <ul class="navigation">
+                <li><a href="#" id="home">Home</a></li>
+                <li><a href="#" id="old">Old</a></li>
+                <li><a href="#" id="new">New</a></li>
+                <li><a href="#" id="large">Large</a></li>
+                <li><a href="#" id="small">Small</a></li>
+            </ul>
+        </nav>
 
-    <p>This site provides song recommendations along with the artists and playlists.</p>
+    </header>
 
-    <p>What are the best songs of Rock?</p>
+    <main>
+        <section>
+            <p>This site provides song recommendations along with the artists and playlists.</p>
+        </section>
+        <section>
+            <p>What are the best songs of Rock?</p>
+        </section>
+        <div>
+            <p>Where can I find the most popular artists of 2024?</p>
+        </div>
+    </main>
 
-    <p>Where can I find the most popular artists of 2024?</p>
-
-    
+    <footer>
+        <p><span id="currentyear"></span> Karim Valenzuela Sinaloa, México.</p>
+        <p id="lastModified"></p>
+    </footer>
     
 </body>
 </html>
