--- a/project/recommendations.html
+++ b/project/recommendations.html
@@ -35,9 +35,9 @@
             <p>Where can I find the most popular artists of 2024?</p>
         </div>
         <h2>Home</h2>
-        <div class="container">
+        <!-- <div class="container">
            
-        </div>
+        </div> -->
     </main>
 
     <footer>
