final project advance

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -18,7 +18,7 @@
                 <li><a href="siteplan.html" id="home">Home</a></li>
                 <li><a href="siteplan.html" id="new">Popular Songs</a></li>
                 <li><a href="recommendations.html" id="old">Recommendations</a></li>
-                <li><a href="#" id="small">Top New Discoveries</a></li>
+                <li><a href="form.html" id="small">Your songs</a></li>
             </ul>
         </nav>
 
@@ -31,10 +31,11 @@
         <section>
             <p>What are the best songs of Rock?</p>
         </section>
-        <div>
+        <!-- <div>
             <p>Where can I find the most popular artists of 2024?</p>
-        </div>
-        <h2>Home</h2>
+        </div> -->
+        <h2>Popular Songs as of February 18, 2025</h2>
+        <p>Where can I find the most popular artists of 2024?</p>
         <div class="container">
            
         </div>
@@ -43,6 +44,7 @@
     <footer>
         <p><span id="currentyear"></span> Karim Valenzuela Sinaloa, México.</p>
         <p id="lastModified"></p>
+        <p id="">I do not own this songs or images.</p>
     </footer>
     
 </body>
