--- a/project/thank.html
+++ b/project/thank.html
@@ -26,12 +26,12 @@
 
     <main>
         <section>
-            <p>This site provides song recommendations.</p>
+            <p>Thank you for adding a song!.</p>
         </section>        
-        <h2>Popular Songs as of February 18, 2025</h2>
-        <div class="container">
+        <!-- <h2>Popular Songs as of February 18, 2025</h2> -->
+        <!-- <div class="container">
            
-        </div>
+        </div> -->
     </main>
 
     <footer>
