added final project link on home course page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/alma/30?lang=spa&id=p44#p44" target="_blank">Scripture</a>
             </li>
             <li>
-                <a href="#">Final Project</a>
+                <a href="./project/siteplan.html">Final Project</a>
             </li>
         </ul>
     </nav>
